fixed gap

--- a/src/components/HeroSection/index.css
+++ b/src/components/HeroSection/index.css
@@ -27,13 +27,17 @@
 
 .HeroSectionLeftText > h1{
     /* font-family: 'Inter'; */
-    font-style: normal;
+    font-style:normal;
     font-weight: 400;
     font-size: 40px;
     line-height: 54px;
     color: #000000;
     margin: 0px 0;
-    font-family: "Comfortaa", sans-serif;
+    /* font-family: "Comfortaa", sans-serif; */
+    /* font-family: 'Comfortaa', 'cursive'; */
+    font-family:  'Comfortaa',sans-serif;
+ 
+   
 
     
 }
@@ -115,8 +119,8 @@
 @media screen and (max-width: 1200px) {
         
     .HeroSectionLeftText > h1{
-        font-weight: 700;
-        font-size: 48px;
+        font-weight: 200;
+        font-size: 38px;
         line-height: 44px;
     }
 
@@ -132,7 +136,7 @@
 @media screen and (max-width: 1000px) {
         
     .HeroSectionLeftText > h1{
-        font-weight: 700;
+        font-weight: 200;
         font-size: 32px;
         line-height: 38px;
     }
@@ -151,7 +155,7 @@
         width: 30%;
     }
     .HeroSectionLeftText > h1{
-        font-weight: 700;
+        font-weight: 200;
         font-size: 28px;
         line-height: 33px;
     }
@@ -171,7 +175,7 @@
         width: 30%;
     }
     .HeroSectionLeftText > h1{
-        font-weight: 700;
+        font-weight: 200;
         font-size: 23px;
         line-height: 28px;
     }
@@ -190,7 +194,7 @@
         width: 30%;
     }
     .HeroSectionLeftText > h1{
-        font-weight: 700;
+        font-weight: 200;
         font-size: 18px;
         line-height: 23px;
     }
@@ -209,7 +213,7 @@
         width: 30%;
     }
     .HeroSectionLeftText > h1{
-        font-weight: 700;
+        font-weight: 200;
         font-size: 13px;
         line-height: 18px;
     }
@@ -228,9 +232,9 @@
         width: 30%;
     }
     .HeroSectionLeftText > h1{
-        font-weight: 700;
+        font-weight: 200;
         font-size: 10px;
-        line-height: 12px;
+        line-height: 18px;
     }
 
      .HeroSectionLeftText > p{
@@ -247,7 +251,7 @@
         width: 50%;
     }
     .HeroSectionLeftText > h1{
-        font-weight: 700;
+        font-weight: 200;
         font-size: 8px;
         line-height: 10px;
     }
